# sanku-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  loggers.py  settings.py
app/core/: models.py
app/db/: tables.py
app/db/queries/: user_queries.py
app/models/: chat.py  general_models.py  prompt_models.py  user.py
app/models/queries/: user_queries.py
app/prompts/: chat_prompt.md
app/routers/: auth.py  chat.py
app/routes/: chat.py
app/schemas/: prompt_schema.py
app/services/: chat_service.py  embedding_service.py  llm_service.py  milvus_service.py  mongodb_service.py
app/utils/: auth_utils.py  logger_utils.py  milvus_utils.py  prompt_utils.py
