[project]
name = "gymbro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sankalpaacharya", email = "sankalpaacharya01@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.12", "pydantic-settings>=2.8.1", "logging>=0.4.9.6", "openai>=1.74.0", "groq>=0.22.0", "pymilvus>=2.5.6"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"