[project]
name = "gymbro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "sankalpaacharya", email = "sankalpaacharya01@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.8.1",
    "openai>=1.74.0",
    "groq>=0.22.0",
    "pymilvus>=2.5.6",
    "sqlmodel>=0.0.24",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "authlib>=1.5.2",
    "pyjwt>=2.10.1",
    "itsdangerous>=2.2.0",
    "google-auth>=2.39.0",
    "python-jose>=3.4.0",
    "neon-api>=0.3.0",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "jinja2>=3.1.6",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "pprintpp>=0.4.0",
    "beanie[srv]",
    "sentence-transformers>=5.3.0",
    "motor>=3.7.1",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
